# ai-workflows

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Containerfile.c10s  Containerfile.c9s  Containerfile.c9s-tests  Containerfile.mcp  Containerfile.supervisor  Containerfile.tests  Makefile  README-agents.md  README-supervisor.md  README.md  compose.yaml  env.template  pyproject.toml
beeai/: .gitignore  Containerfile  Containerfile.c10s  Containerfile.issue-fetcher  Containerfile.jira-issue-fetcher  Containerfile.mcp  Containerfile.tests  Makefile  Makefile.tests  README-agents.md  README.md  beeai-gemini-malformed-function-call.patch  beeai-gemini.patch  beeai-instrumentation.patch  beeai-propagate-mcp-errors.patch  compose.yaml  pyproject.toml
beeai/.github/workflows/: check-in-container.yml
beeai/agents/: backport_agent.py  base_agent.py  build_agent.py  constants.py  gemini.py  log_agent.py  rebase_agent.py  tasks.py  tools.py  triage_agent.py  utils.py
beeai/agents/tests/unit/: test_tools.py
beeai/agents/tools/: commands.py  patch_validator.py  specfile.py  text.py  utils.py  version_mapper.py  wicked_git.py
beeai/common/: config.py  constants.py  models.py  utils.py
beeai/issue_fetcher/: jira_issue_fetcher.py
beeai/jira_issue_fetcher/: jira_issue_fetcher.py
beeai/jira_issue_fetcher/tests/unit/: test_jira_issue_fetcher.py
beeai/mcp_server/: copr_tools.py  gateway.py  gitlab_tools.py  jira_tools.py  lookaside_tools.py  utils.py
beeai/mcp_server/tests/unit/: test_copr.py  test_gitlab_tools.py  test_jira_tools.py  test_lookaside.py
beeai/mcp_servers/: gitlab_server.py
beeai/openshift/: Makefile  README.md  configmap-x-beeai-agent-configmap.yml  configmap-x-jira-issue-fetcher.yml  cronjob-jira-issue-fetcher.yml  deploy.sh  deployment-backport-agent-c10s.yml  deployment-backport-agent-c9s.yml  deployment-backport-agent.yml  deployment-mcp-atlassian.yml  deployment-mcp-gateway.yml  deployment-phoenix.yml  deployment-rebase-agent-c9s.yml  deployment-rebase-agent.yml  deployment-redis-commander.yml  deployment-triage-agent.yml  deployment-valkey.yml  imagestream-beeai-agent.yml  imagestream-mcp-atlassian.yml  imagestream-mcp-gateway.yml  imagestream-valkey.yml  pvc-mcp-server-git-repos.yml  pvc-phoenix-data.yml  pvc-valkey-data.yml  route-phoenix.yml  service-backport-agent.yml  service-mcp-atlassian.yml  service-mcp-gateway.yml  service-phoenix.yml  service-rebase-agent.yml  service-redis-commander.yml  service-triage-agent.yml  service-valkey.yml
beeai/supervisor/: errata_utils.py  erratum_handler.py  http_utils.py  issue_handler.py  jira_utils.py  main.py  qe_data.py  supervisor_types.py  testing_analyst.py  work_item_handler.py  work_queue.py
beeai/supervisor/tools/: read_readme.py
beeai/templates/: beeai-agent.env  jira-issue-fetcher.env  mcp-atlassian.env  mcp-gateway.env  rhel-config.json  supervisor.env
testing-farm-sse-bridge/: .containerignore  Containerfile  Makefile  README.md  pyproject.toml
testing-farm-sse-bridge/testing_farm_sse_bridge/: __main__.py  app.py  run_container.py
(+145 files in other folders)
