[project]
name = "ai-workflows-beeai"
version = "0.1.0"
description = "ai-workflows development environment"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiohttp>=3.12.15",
    "arize-phoenix-otel>=0.13.0",
    "beeai-framework[mcp,duckduckgo]>=0.1.36",
    "fastmcp>=2.11.3",
    "flexmock>=0.12.2",
    "ogr>=0.55.0",
    "openinference-instrumentation-beeai>=0.1.8",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "redis>=6.4.0",
    "rpm>=0.4.0",
    "specfile>=0.36.0",
]
