[project]
name = "testing-farm-sse-bridge"
version = "0.1.0"
description = "FastAPI-based SSE bridge for Testing Farm requests"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ray Strode", email = "rstrode@redhat.com" },
]
keywords = ["testing-farm", "sse", "fastapi", "uvicorn"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Framework :: FastAPI",
  "Topic :: Internet :: WWW/HTTP",
]

# Runtime dependencies
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project.scripts]
# CLI entrypoint: `testing-farm-sse-bridge` → launches uvicorn
"testing-farm-sse-bridge" = "testing_farm_sse_bridge.__main__:main"
# Convenience scripts for container build and run
"container-build" = "testing_farm_sse_bridge.build_container:main"
"container" = "testing_farm_sse_bridge.run_container:main"


[tool.hatch.build]
include = [
  "testing_farm_sse_bridge",
  "README.md",
  "LICENSE",
]
